syntax = "proto3";

option csharp_namespace = "EchoSphere.Users.Api.Grpc";

package users;

service UsersService {
	rpc CreateUser (CreateUserRequest) returns (CreateUserResponse);

	rpc GetUserProfiles(GetUserProfilesRequest) returns (GetUserProfilesResponse);

	rpc GetUserByUserNameAndPassword (GetUserByUserNameAndPasswordRequest) returns (GetUserByUserNameAndPasswordResponse);
}

message UserProfileDto {
	string user_name = 1;
	string email = 2;
}

message CreateUserRequest {
	string user_name = 1;
	string email = 2;
	string password = 3;
}

message CreateUserResponse {
	string id = 1;
}

message GetUserProfilesRequest {}

message GetUserProfilesResponse {
	repeated UserProfileDto profiles = 1;
}

message GetUserByUserNameAndPasswordRequest {
	string user_name = 1;
	string password = 2;
}

message GetUserByUserNameAndPasswordResponse {
	optional UserProfileDto user = 1;
}
